# exam-sys

./: README.md
exam_sys/: CMakeLists.txt
exam_sys/include/: database.hpp  headers.hpp  manager.hpp  quiz.hpp  user.hpp
exam_sys/sql/: build.sql  data.sql
exam_sys/src/: database.cpp  main.cpp  manager.cpp  quiz.cpp  user.cpp
